# paxos

./: README.md
paxos/: CMakeLists.txt
paxos/src/consensus/: acceptor.cpp  acceptor.hpp  learner.cpp  learner.hpp  proposer.cpp  proposer.hpp
paxos/src/core/: messages.hpp  types.hpp
paxos/src/storage/: state_manager.cpp  state_manager.hpp
paxos/tests/unit/: CMakeLists.txt  test_consensus.cpp
